# ur

./: .gitignore  README.md  com.github.binudakal.gnomeur.json  com.github.binudakal.ur.json  com.github.binudakal.ur.json~  io.github.binudakal.ur.flatpak  io.github.binudakal.ur.json  meson.build
data/: .gitignore  com.github.binudakal.gnomeur.desktop.in  com.github.binudakal.gnomeur.gschema.xml  com.github.binudakal.gnomeur.metainfo.xml.in  com.github.binudakal.ur.desktop.in  com.github.binudakal.ur.gschema.xml  com.github.binudakal.ur.metainfo.xml.in  io.github.binudakal.ur.desktop.in  io.github.binudakal.ur.gschema.xml  io.github.binudakal.ur.metainfo.xml.in  meson.build  ur.gresource.xml
data/icons/: meson.build
data/ui/: help-overlay.ui  horizontal_game.ui  scores.ui  start_window.ui  vertical_game.ui
po/: POTFILES  meson.build
src/: constants.py  game.py  game_elements.py  game_window.py  game_window.ui  gnome-ur.gresource.xml  gnome-ur.in  main.css  main.py  meson.build  scores.py  settings.py  start_window.py  start_window.ui  ur.gresource.xml  ur.in  window.py  window.ui
